tests/compilation_failure_tests/iteration_order/invalid_variant.rs
use derive_enum_rotate::EnumRotate;

#[derive(EnumRotate)]
#[iteration_order(A, B, D)]
enum Enum {
    A, B, C
}
